# experimentation-platform

./: .coveragerc  .editorconfig  .env.dev  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  2-Week-JavaScript-React-Learning-Plan.md  API_Architecture_PM_Interview_Guide.md  AWS_ROUTE53_DEPLOYMENT.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  LICENSE.txt  MARKETING_WEBSITE_GUIDE.md  README.md  TRANSITION_TO_COMMERCIAL.md  Technical_API_Architecture_Guide.md  coverage.xml  docker-compose.yml  experiment_platform_changes.md  generate_config.py  generate_project.py  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  setup_venv.sh  test_dev_auth.sh
.claude/: EP010_PHASE4_EXECUTION_PLAN.md  EP010_QUICK_START.md  PHASE4_VALIDATION.md  PHASE_4_PLAN.md  QUICKSTART_PHASE4.md  README_PHASE4.md
.cursor/: project_instructions.md
backend/: .env.prod  .env.test  CLAUDE.md  Dockerfile  __init__.py  coverage.xml  init_test_db.py  migrations  pytest.ini  requirements-monitoring.txt  requirements.txt
dev-setup/: docker-compose-file.md  pre-commit-hooks.md  python-virtual-env-setup.md  vscode-settings.md
docs/: CODEBASE_INDEX.md  Database-Migrations-Guide.md  Enhanced_Rules_Engine_Reference.md  LOCAL_DEVELOPMENT_AUTH.md  README.md  api_endpoints.md  api_specs.md  architecture.md  auth-environment-variables.md  auth-flow-diagrams.md  auth-user-guide.md  cognito_integration.md  database-usage-examples.md  dependency-injection.md  development-guidelines.md  development-plan.md  docker-compose-file.md  issue_fixes.md  logging_standards.md  (+5 more)
(+442 files in other folders)
