[metadata]
name = experimentation-platform
version = 0.1.0
description = Experimentation platform for A/B testing and feature flags
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests
    tests.*

[bdist_wheel]
universal = 0
