[metadata]
name = experimentation-platform
version = 0.1.0
description = Experimentation platform for A/B testing and feature flags
author = Ashish Markanday
author_email = a.markanday@gmail.com
license = MIT

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests
    tests.*

[bdist_wheel]
universal = 0
